objects/LPI_Demo_Data__c.object
<CustomObject>
    <fields>
        <fullName>DemoSelected__c</fullName>
        <label>DemoSelected</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Scenario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Scenario</label>
        <referenceTo>LPI_Demo_Scenario__c</referenceTo>
        <relationshipLabel>LPI Demo Data</relationshipLabel>
        <relationshipName>LPI_Demo_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DomainName__c</fullName>
        <label>DomainName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LPI</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LPI Demo Data</label>
    <nameField>
        <label>LPI Demo Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LPI Demo Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>